Add multiple shacl file for validation at API level
