# validator/entrypoints/api/openapi/openapi.yaml
@@ -41,13 +41,29 @@ paths:
                   type: string
                   format: binary
                   description: The data content to validate
-                schema_file:
+                schema_file0:
                   type: string
                   format: binary
-                  description: The content of the SHACL shape files defining the validation constraints
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file1:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file2:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file3:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file4:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
               required:
                 - data_file
-                - schema_file
+                - schema_file0
       responses:
         200:
           description: Request to validate endpoint successfully accepted for processing.
@@ -77,13 +93,29 @@ paths:
                   description: An optional list of named graphs to restrict the scope of the validation
                   items:
                     type: string
-                schema_file:
+                schema_file0:
                   type: string
                   format: binary
-                  description: The content of the SHACL shape files defining the validation constraints
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file1:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file2:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file3:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
+                schema_file4:
+                  type: string
+                  format: binary
+                  description: The content of the SHACL shape file defining the validation constraints
               required:
                 - sparql_endpoint_url
-                - schema_file
+                - schema_file0
       responses:
         200:
           description: Request to validate endpoint successfully accepted for processing.
